--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -15,7 +15,7 @@
       "
     >
       <h1 style="padding-inline: 10px; font-size: 18px; color: #444">
-        Mastodon StreetPass
+        StreetPass
       </h1>
 
       <div
