--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -17,7 +17,7 @@
     >
       <div style="display: flex; flex-direction: column; padding-top: 9px">
         <img
-          src="icon128.png"
+          src="/icon128.png"
           width="48"
           height="48"
           style="align-self: center"
