--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <script type="module" src="popup"></script>
   </head>
   <body>
     <div
@@ -49,7 +50,5 @@
         "
       ></div>
     </div>
-
-    <script type="module" src="popup.js"></script>
   </body>
 </html>
