--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -1,8 +1,8 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <script type="module" src="popup"></script>
   </head>
   <body>
     <div
@@ -50,5 +50,7 @@
         "
       ></div>
     </div>
+
+    <script type="module" src="popup.ts"></script>
   </body>
 </html>
