--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -7,7 +7,7 @@
   <body>
     <div
       id="root"
-      class="relative flex flex-col min-h-[600px] w-[350px] gap-18"
+      class="relative flex flex-col h-[600px] w-[350px] gap-18 bg-white overflow-auto"
     >
       <div class="flex flex-col items-center pt-[9px]">
         <img src="/icon-128.png" width="48" height="48" />
