--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -9,18 +9,8 @@
       id="root"
       class="relative flex flex-col h-[600px] w-[350px] gap-18 bg-white overflow-auto"
     >
-      <div class="flex flex-col items-center pt-[9px]">
-        <img src="/icon-128.png" width="48" height="48" />
 
-        <h1 class="text-14 font-medium leading-[1.21]">StreetPass</h1>
-      </div>
 
-      <div
-        class="flex flex-col gap-18 px-12 text-13 leading-[1.45] pb-18"
-        id="profile-list"
-      ></div>
-    </div>
-
-    <script type="module" src="popup.ts"></script>
+    <script type="module" src="popup.tsx"></script>
   </body>
 </html>
