--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,8 +7,8 @@
   <body>
     <div
       id="root"
-      class="relative flex flex-col h-[600px] w-[350px] gap-18 bg-white overflow-auto"
-    >
+      class="relative flex h-[600px] w-[350px] flex-col overflow-auto bg-white"
+    ></div>
 
     <script type="module" src="popup.tsx"></script>
   </body>
