--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -5,10 +5,7 @@
     <link rel="stylesheet" type="text/css" href="popup.css" />
   </head>
   <body>
-    <div
-      id="root"
-      class="relative flex h-[600px] w-[350px] flex-col overflow-auto bg-white"
-    ></div>
+    <div id="root" class="contents"></div>
 
     <script type="module" src="popup.tsx"></script>
   </body>
